--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -51,6 +51,6 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render 'bookmarks/recent_bookmarks' %>
-</sidebar>
+</section>
