--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
   </section>
 </section>
 
-<sidebar>
+<section id="sidebar" class="sidebar">
   <aside>
     <h3>Welcome to Line of Thought!</h3>
     <p>We provide an easy way for developers to <em>share information</em> about what powers their websites.</p>
@@ -24,4 +24,4 @@
   </aside>
   <%= render :partial => "tools/featured" %>
   <%= render :partial => "usings/recent" %>
-</sidebar>
+</section>
