--- a/app/views/home/stream.html.erb
+++ b/app/views/home/stream.html.erb
@@ -7,10 +7,10 @@
   </article>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render :partial => "sites/featured" %>
   <%= render :partial => "tools/featured" %>
-</sidebar>
+</section>
 
 
 <% javascript_files do %>
