--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -42,7 +42,7 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render :partial => "devise/shared/links" %>
   <aside>
     <h3>Another site, Another Password?</h3>
@@ -54,4 +54,4 @@
     <p>We're still trying to get the basics of the system down, so for now we're trying to work closely with those using the system to create an awesome site.</p>
     <p>Sign up to be <%= link_to "notified", new_subscription_path %> in order to get an invite to join before we launch pubicly.</p>
   </aside>
-</sidebar>
+</section>
