--- a/app/views/sites/_show_sidebar.erb
+++ b/app/views/sites/_show_sidebar.erb
@@ -1,4 +1,4 @@
-<sidebar>
+<section class="sidebar">
   <aside>
     <h3>Your Permissions</h3>
       <% if logged_in? %>
@@ -70,4 +70,4 @@
   </aside>
   <% end %>
   <%= render :partial => "tools/featured" %>
-</sidebar>
+</section>
