--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -18,8 +18,8 @@
     
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render :partial => "tools/featured" %>
   <%= render :partial => "usings/recent" %>
   <%= render :partial => "sites/featured" %>
-</sidebar>
+</section>
