--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<sidebar>
+<section class="sidebar">
   <% if logged_in? && current_user.id == @user.id %>
   <aside>
     <h3>My Account</h3>
@@ -36,4 +36,4 @@
     <p>Canceling your account will not remove your work. It'll de-associate it with you, and all traces of your identify will be erased.
   </aside>
   <% end %>
-</sidebar>
+</section>
