--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -59,7 +59,7 @@ ul.tabs a:hover { background-color: #fff;	}
 div.disqus_wrapper { padding:1em; font-size:14px; }
 
 
-sidebar aside.search input[type='text'] { width:200px; border-color:#bbb; }
+sidebar aside.search input[type='text'], .sidebar aside.search input[type='text'] { width:200px; border-color:#bbb; }
 
 body.sites-show li.sites-show a:link, body.sites-show li.sites-show a:visited,
 body.site_tools-index li.site_tools-index a:link, body.site_tools-index li.site_tools-index a:visited,
