--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -12,7 +12,7 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <aside class="search">
     <form action="<%= bookmarks_path %>" method="get">
       <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a bookmark..." />
@@ -33,4 +33,4 @@
     <% end %>
   </aside>  
   <%= render 'bookmarks/recent_bookmarks' %>
-</sidebar>
+</section>
