--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -18,6 +18,6 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render :partial => "devise/shared/links" %>
-</sidebar>
+</section>
