--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,6 +14,6 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render :partial => "devise/shared/links" %>
-</sidebar>
+</section>
