--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,11 +14,11 @@
   </article>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <%= render 'layouts/sidebar/site_stats' %>
   <aside>
     <h3>Learn More</h3>
     <p>Check what <%= link_to "tool we're using", lineofthought_url %>.</p>
     <p>Visit our <%= link_to "blog", "http://blog.lineofthought.com" %>.</p>
   </aside>
-</sidebar>
+</section>
