--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
     })();
   </script>
   <%- end -%>
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
 <body class="<%= yield(:body_classes) %> <%= params[:controller] %> <%= [params[:controller], params[:action]].join("-") %>">
 <header class="group">
@@ -87,6 +90,7 @@
   <script src="/javascripts/jquery/jquery-1.5.1.min.js" type="text/javascript"></script>
   <script src="/javascripts/jquery/jquery-ui-1.8.11.custom.min.js" type="text/javascript"></script>
 <% end %>
+
 <%= raw javascript_include_merged :all %>
 <%= yield :javascript %>
 </body>
