--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -26,7 +26,7 @@
   </section>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <aside class="search">
     <form action="<%= sites_path %>" method="get">
       <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a site..." />
@@ -50,4 +50,4 @@
   </aside>
   
   <%= render :partial => "sites/featured" %>
-</sidebar>
+</section>
