--- a/app/views/tools/autocomplete_example.html.erb
+++ b/app/views/tools/autocomplete_example.html.erb
@@ -31,7 +31,7 @@
   <ul id="new_tools"></ul>
 </section>
 
-<sidebar>
+<section class="sidebar">
   <aside class="search">
     <form action="<%= tools_path %>" method="get">
       <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a tool..." />
@@ -55,7 +55,7 @@
       <p><%= link_to "Sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to get started.</p>
     <% end %>
   </aside>
-</sidebar>
+</section>
 
 <% javascript do %>
 	$(function() {
