--- a/app/views/tour/_sidebar.html.erb
+++ b/app/views/tour/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<sidebar>
+<section class="sidebar">
   <aside>
     <h3>Line of Thought Tour</h3>
     <ul class="lst">
@@ -8,4 +8,4 @@
       <li><%= link_to "About Permissions", permissions_tour_path %></li>
     </ul>
   </aside>
-</sidebar>
+</section>
