--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -166,17 +166,17 @@ nav ul li a:hover {background-color: #68aff3; color: #eee}
  section, aside {display: block}
 #main {background-color: #E3E3E3; color: #1B1B1B}
 #content {padding: 14px}
-#content, sidebar aside {background-color: #fff; border: 1px solid #ccc; font-size: 14px}
+#content, sidebar aside, .sidebar aside {background-color: #fff; border: 1px solid #ccc; font-size: 14px}
 #main .container {padding: 10px 0}
  #content {width: 620px; float: left}
 body.popup #content {width: 550px}
 .main section {padding: .4em}
- body.popup sidebar {display: none}
-sidebar {width: 300px; float: right}
-sidebar aside {margin-bottom: 10px; padding: 15px}
-sidebar aside h3 {margin: 0 0 6px 0; padding: 0 0 4px 0; font-size: 16px; font-weight: bold; color: #365B81; border-bottom: 2px solid #ecebe1}
-sidebar aside p.more {margin-top: 12px; text-align: center}
-sidebar aside p {margin-top: 12px; font-size: 16px; line-height: 20px}
+ body.popup sidebar, body.popup .sidebar {display: none}
+.sidebar, sidebar {width: 300px; float: right}
+.sidebar aside, sidebar aside {margin-bottom: 10px; padding: 15px}
+.sidebar aside h3, sidebar aside h3 {margin: 0 0 6px 0; padding: 0 0 4px 0; font-size: 16px; font-weight: bold; color: #365B81; border-bottom: 2px solid #ecebe1}
+.sidebar aside p.more, sidebar aside p.more {margin-top: 12px; text-align: center}
+.sidebar aside p, sidebar aside p {margin-top: 12px; font-size: 16px; line-height: 20px}
  ul.txt li {padding: 7px; border-bottom: 1px solid #f3f2e8; overflow: hidden}
 ul.txt li:hover {background: #EFF2F7}
  ul.lst li a {display: block; padding: 7px; border-bottom: 1px solid #f3f2e8; overflow: hidden}
@@ -245,7 +245,7 @@ ul.tabs a:hover {background-color: #fff}
 * html .pagination {height: 1%}
 *:first-child + html .pagination {overflow: hidden}
 div.disqus_wrapper {padding: 1em; font-size: 14px}
-sidebar aside.search input[type='text'] {width: 200px; border-color: #bbb}
+sidebar aside.search input[type='text'], .sidebar aside.search input[type='text'] {width: 200px; border-color: #bbb}
 body.sites-show li.sites-show a:link, body.sites-show li.sites-show a:visited, body.site_tools-index li.site_tools-index a:link, body.site_tools-index li.site_tools-index a:visited, body.site_claims-new li.site_claims-new a:link, body.site_claims-new li.site_claims-new a:visited, body.site_tools-manage li.site_tools-manage a:link, body.site_tools-manage li.site_tools-manage a:visited, body.tools-show li.tools-show a:link, body.tools-show li.tools-show a:visited, body.tools-edit li.tools-edit a:link, body.tools-edit li.tools-edit a:visited, body.tool_sites-new li.tool_sites-new a:link, body.tool_sites-new li.tool_sites-new a:visited, body.tool_sites-index li.tool_sites-index a:link, body.tool_sites-index li.tool_sites-index a:visited, body.site_claims-create li.site_claims-create a:link, body.site_claims-create li.site_claims-create a:visited, body.tool_sites-manage li.tool_sites-manage a:link, body.tool_sites-manage li.tool_sites-manage a:visited, body.sites-edit li.sites-edit a:link, body.sites-edit li.sites-edit a:visited, body.bookmarks-show li.bookmarks-show a:link, body.bookmarks-show li.bookmarks-show a:visited, body.bookmarks-edit li.bookmarks-edit a:link, body.bookmarks-edit li.bookmarks-edit a:visited, body.bookmarks-sites li.bookmarks-sites a:link, body.bookmarks-sites li.bookmarks-sites a:visited, body.bookmarks-tools li.bookmarks-tools a:link, body.bookmarks-tools li.bookmarks-tools a:visited, body.tools-bookmarks li.tools-bookmarks a:link, body.tools-bookmarks li.tools-bookmarks a:visited, body.sites-bookmarks li.sites-bookmarks a:link, body.sites-bookmarks li.sites-bookmarks a:visited, body.saved_bookmark-new li.saved_bookmark-new a:link, body.saved_bookmark-new li.saved_bookmark-new a:visited, body.saved_bookmark-edit li.saved_bookmark-edit a:link, body.saved_bookmark-edit li.saved_bookmark-edit a:visited, body.site_tools-deleted li.site_tools-deleted a:link, body.site_tools-deleted li.site_tools-deleted a:visited, body.tool_sites-deleted li.tool_sites-deleted a:link, body.tool_sites-deleted li.tool_sites-deleted a:visited {border-bottom: 1px solid #fff; background: #fff; color: #000}
  .show-header {position: relative}
 .show-header h2 {display: inline}
