--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -127,7 +127,7 @@ section, aside {
 #content {
   padding: 14px; }
 
-#content, sidebar aside {
+#content, sidebar aside, .sidebar aside {
   background-color: #fff;
   border: 1px solid #ccc;
   font-size: 14px; }
@@ -147,18 +147,18 @@ body.popup #content {
   padding: .4em; }
 
 /* Right sidebar */
-body.popup sidebar {
+body.popup sidebar, body.popup .sidebar {
   display: none; }
 
-sidebar {
+.sidebar, sidebar {
   width: 300px;
   float: right; }
 
-sidebar aside {
+.sidebar aside, sidebar aside {
   margin-bottom: 10px;
   padding: 15px; }
 
-sidebar aside h3 {
+.sidebar aside h3, sidebar aside h3 {
   margin: 0 0 6px 0;
   padding: 0 0 4px 0;
   font-size: 16px;
@@ -166,11 +166,11 @@ sidebar aside h3 {
   color: #365B81;
   border-bottom: 2px solid #ecebe1; }
 
-sidebar aside p.more {
+.sidebar aside p.more, sidebar aside p.more {
   margin-top: 12px;
   text-align: center; }
 
-sidebar aside p {
+.sidebar aside p, sidebar aside p {
   margin-top: 12px;
   font-size: 16px;
   line-height: 20px; }
