--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= page_title %></title>
+  <link rel="shortcut icon" href="/favicon.ico"/>
   <meta content="<%= page_description %>" name="description" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" />
