--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title><%= page_title %></title>
   <link rel="shortcut icon" href="/favicon.ico"/>
+  <link rel="fluid-icon" href="/fluidicon.png" title="Line of Thought" /> 
   <meta content="<%= page_description %>" name="description" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" />
