Refactored the home page and add tools to a site.

--- a/app/stylesheets/list.scss
+++ b/app/stylesheets/list.scss
@@ -101,4 +101,5 @@ ul.main-list .using li a { background-color:#ccc; padding:.4em; }
 */
 
 section.add_in_place { border-top:1px solid #ccc; }
-p.add_more { text-align:center; font-size:18px; color:#555; margin:14px 0; }
+p.add_more { text-align:center; font-size:18px; color:#555; margin:14px 0; line-height:40px; }
+p.add_more a { margin-left:14px; }
