--- a/app/views/sites/_add_new_tools.erb
+++ b/app/views/sites/_add_new_tools.erb
@@ -1,6 +1,7 @@
-<p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
-<section id="new_using_form" style="display:none;" class="add_in_place">
-  <% if logged_in? && current_user.can_add_lines?(@site) %>
+<a name="add_new_tool"></a>
+<p class="add_more">Know of another tool used on this site? <a href="#add_new_tool" class="button green add_another_tool">Add it here</a></p>
+<section id="new_using_form" <%= "style='display:none;' " if @site.tools_count > 0  %> class="add_in_place">
+  <% if can_add_lines?(@site) %>
     <%= render 'site_tools/form' %>
   <% elsif !logged_in? %>
     <p class="main_message">You must <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add a tool.</p>
