--- a/app/views/sites/_tools.erb
+++ b/app/views/sites/_tools.erb
@@ -1,5 +1,6 @@
 <section class="tab">
-  <a name="add_new_tool"></a>
+  <%= render 'sites/add_new_tools' if can_add_lines?(@site) %>
+
   <% if @site.tools_count > 0 || tools.count > 0 %>
     <div class="title_bar group">
       <% description "We know of #{pluralize(@site.tools_count, "tool")} used #{@site.title} (#{@site.url})." %>
@@ -12,21 +13,16 @@
         </ul>
       </div>
     </div>
-
-    <% if !logged_in? || current_user.can_add_lines?(@site) %>
-      <%= render 'sites/add_new_tools' %>
-    <% end %>
-
+    
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
       <%= render :partial => 'usings/using_tool', :collection => tools %>
     </ul>
   <% else %>
-    <%= render 'sites/add_new_tools' %>
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>"></ul>
     <p class="main_message">We don't know of any tools used by <strong><%= @site.title %></strong>.</p>
   <% end %>
 
-  <% if tools.length > 10 %>
-    <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
+  <% if can_add_lines?(@site) && tools.count > 10 %>
+    <p class="add_more"><a href="#add_new_tool" class="add_another_tool grey button block">Add another tool here</a></p>
   <% end %>
 </section>
