--- a/app/views/usings/_using_site.erb
+++ b/app/views/usings/_using_site.erb
@@ -25,10 +25,10 @@
     <% end %>
     <ul class="actions">
       <li class="comments"><%= link_to "comments", site_tool_path(site, tool, :format => params[:format]) %></li>
-      <% if logged_in? && current_user.can_edit_using?(using_site, site) %>
+      <% if can_edit_using?(using_site, site) %>
         <li class="edit-in-place-edit"><%= link_to "edit", "#" %></li>
         <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
-        <% if !using_site.deleted? && current_user.can_destroy_using?(using_site, site, tool) %>
+        <% if !using_site.deleted? && can_destroy_using?(using_site, site, tool) %>
           <li><%= link_to "remove", using_path(using_site), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
         <% end %>
       <% end %>
@@ -38,7 +38,7 @@
   <%= raw using_bookmarks(using_site, 2, params[:format]) if using_site.bookmarks_count > 0 %>
   
   
-  <% if logged_in? && current_user.can_edit_using?(using_site, site) %>
+  <% if can_edit_using?(using_site, site) %>
     <%= semantic_form_for using_site, :remote => true, :method => :put, :html => { :id => "edit_using_#{using_site.id}" } do |form| %>
       <%= form.inputs do %>
         <%= form.input :description, :label => "How is #{site.title} using #{tool.name}?", :as => :text, :required => false, :input_html => { :rows => 1, :class => "using_description" } %>
