--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -12,7 +12,7 @@ abbr[title], dfn[title] {cursor: help}
 hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0}
 input, select {vertical-align: middle}
 body {color: #222; font-size: 13px; font-family: arial, "helvetica neue", helvetica, "lucida grande", sans-serif}
-h1, h2, h3, h4, h5, h6 {color: #111; font-family: "helvetica neue", Helvetica, arial, sans-serif}
+h1, h2, h3, h4, h5, h6 {color: #555; font-family: "helvetica neue", Helvetica, arial, sans-serif}
  div.alert, div.error, div.notice, div.success, #flash_failure, #flash_success, #flash_notice {border: 1px solid #ddd; -moz-border-radius: 8px; -webkit-border-radius: 8px; margin-bottom: 1em; font-size: 1.4em; padding: 0.8em}
 div.alert, div.error, #flash_failure {background: #FBE3E4; border-color: #FBC2C4; color: #D12F19}
 div.alert a, div.error a, #flash_failure a {color: #D12F19}
@@ -202,25 +202,30 @@ body.sites nav ul li.sites a, body.tools nav ul li.tools a, body.bookmarks nav u
 .bookmarks {display: none}
 .clear {clear: both}
 .right {float: right}
+.block {display: block}
 p.breadcrumbs {font-size: 8px}
 a.add {background: url(https://s3.amazonaws.com/s.lineofthought.com/images/icons/13-plus.png) no-repeat; padding-left: 20px}
 a.remove {background: url(https://s3.amazonaws.com/s.lineofthought.com/images/icons/14-minus.png) no-repeat 0 7px; padding-left: 20px}
 img.screenshot, .screenshot img {border: 1px solid #ccc; float: left}
 a.external {font-size: 10px}
-a:link, a:visited {color: #3792B3; font-weight: bold; outline-color: -moz-use-text-color; outline-style: none; outline-width: medium; text-decoration: none}
-p.center {text-align: center}
+a:link, a:visited {color: #3792B3; outline-color: -moz-use-text-color; outline-style: none; outline-width: medium; text-decoration: none}
+p.center, .center {text-align: center}
 section.text p, section.text h3 {margin: .5em 1em}
 section.text ul, section.text ol {margin: 1em 1em 1em 1.4em; padding: 0 1em}
 section.text ul {list-style: disc outside}
 section.text ol {list-style: decimal outside}
 section.text ol li {margin-bottom: .5em}
 section.text ul li p, section.text ol li p {margin: 1em 0}
- section.announcement {margin-bottom: 1em}
-section.announcement p {font-size: 18px; color: #333; margin: .5em 1em; text-align: center}
-section.announcement p.title {font-size: 24px; color: #666; margin: .5em 0}
-section.announcement p a {font-weight: bold; font-style: normal}
-section.announcement p a:hover {text-decoration: underline}
+ section.announcement {margin-bottom: 2em}
+section.announcement p.title {font-size: 24px; color: #444; margin: .5em 0; text-align: center}
+section.announcement p.subtitle {font-size: 18px; color: #333; margin: .5em 0 .5em 30px; text-align: center; float: left; width: 300px}
+section.announcement p a {font-style: normal; font-size: 14px}
+section.announcement p a:hover {text-decoration: none}
+section.announcement div.feature {float: right; width: 275px; margin-top: 7px}
+section.announcement div.feature p {line-height: 19px; text-align: center}
+section.announcement div.feature p.subbutton {font-size: 12px; text-align: center; line-height: 8px}
 section.tab {clear: both}
+section.announcement div.feature p.minilink a {text-decoration: underline}
 section.tab p.empty_message, section.tab p.main_message {color: #444; text-align: center; font-size: 16px; margin: 1.5em 0 1em}
   ul.tabs {height: 34px; padding: 0 20px; border-bottom: 1px solid #a3a09e; clear: both; margin: 0}
 ul.tabs li {margin: 0; padding: 0; display: inline; list-style-type: none}
@@ -261,6 +266,9 @@ body.sites-show li.sites-show a:link, body.sites-show li.sites-show a:visited, b
 .titleless li.ind:first-child {border-top: none}
 button.loading {display: none}
 .loading button.loading {display: inline; padding-right: 18px; background: url(/images/indicator.gif) no-repeat right}
+form fieldset.buttons li.loading-indicator {display: none; line-height: 0; margin: 0; padding: 10px 10px 0 0}
+form.loading fieldset.buttons li.loading-indicator {display: inline}
+a.add_another_tool.block {display: block}
 .highlight {background: #ffffff}
 .highlight .c {color: #999988; font-style: italic }
  .highlight .err {color: #a61717; background-color: #e3d2d2 }
@@ -445,4 +453,15 @@ body.site_tools-show .sublist li.ind .actions li.comments {display: none}
 section.deleted li.edit-in-place-edit, section.single-site-tool li.edit-in-place-edit {display: none}
 .edit-in-place:hover .actions {display: block}
  section.add_in_place {border-top: 1px solid #ccc}
-p.add_more {text-align: center; font-size: 18px; color: #555; margin: 14px 0}
+p.add_more {text-align: center; font-size: 18px; color: #555; margin: 14px 0; line-height: 40px}
+p.add_more a {margin-left: 14px}
+.button {text-transform: lowercase; font-family: Arial,sans-serif; font-weight: normal; padding: 7px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; cursor: pointer; display: inline-block; font-size: 18px; line-height: 20px; margin: 0; overflow: visible; padding: 5px 18px; text-decoration: none; width: auto; font-style: inherit}
+.button.orange {background-color: #FFE14C; background-image: -moz-linear-gradient(center top, #fff3b7 0%, #f9b700 100%); background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff3b7), to(#f9b700)); border: 1px solid #FFD400; color: #4D4220; text-shadow: 0 1px 1px #FFEE99}
+.button.orange:hover {background-color: #ffde3d; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #fff0a8), color-stop(100%, #eaac00)); background-image: -moz-linear-gradient(top, #fff0a8 0%, #eaac00 100%); border-color: #f0c700; text-shadow: #ffeb8a 0px 1px 1px}
+.button.orange:active {background-color: #ffdc2d; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #f3b300), color-stop(40%, #ffbc04), color-stop(85%, #ffbc04), color-stop(100%, #ffc627)); background-image: -moz-linear-gradient(top, #f3b300 0%, #ffbc04 40%, #ffbc04 85%, #ffc627 100%); border-color: #e0ba00; text-shadow: #ffe97a 0px -1px -1px}
+.button.grey {color: #333; background-color: white; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, white), color-stop(100%, #b4b4b4)); background-image: -moz-linear-gradient(top, white 0%, #b4b4b4 100%); text-shadow: white 0px 1px 1px; border: 1px solid #b7b7b7}
+.button.grey:hover {color: #4d4220; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, white), color-stop(100%, #acacac)); background-image: -moz-linear-gradient(top, white 0%, #acacac 100%); border-color: #afafaf; text-shadow: white 0px 1px 2px}
+.button.grey:active {color: #4d4220; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #b2b2b2), color-stop(40%, #b9b9b9), color-stop(85%, #b9b9b9), color-stop(100%, #cbcbcb)); background-image: -moz-linear-gradient(top, #b2b2b2 0%, #b9b9b9 40%, #b9b9b9 85%, #cbcbcb 100%); border-color: #a8a8a8; text-shadow: white 0px -1px -1px}
+.button.green {background-color: #98ba40; background-image: -moz-linear-gradient(center top, #98ba40 0%, #6e9e2c 100%); background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#98ba40), to(#6e9e2c)); border: 1px solid #608925; color: #f5f8f1; text-shadow: 0 1px 1px #242217}
+.button.green:hover {background-color: #b0d74a; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #9cbf42), color-stop(100%, #84be35)); background-image: -moz-linear-gradient(top, #9cbf42 0%, #84be35 100%); border: 1px solid #6f9e2b; text-shadow: 0 1px 1px #242217}
+.button.green:active {background-color: #00e600; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #98ba40), color-stop(40%, #98ba40), color-stop(85%, #6e9e2c), color-stop(100%, #6e9e2c)); background-image: -moz-linear-gradient(top, #98ba40 0%, #98ba40 40%, #6e9e2c 85%, #6e9e2c 100%); border-color: #608925; text-shadow: #242217 1px -1px -1px}
