--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,9 @@
 .right {
   float: right; }
 
+.block {
+  display: block; }
+
 p.breadcrumbs {
   font-size: 8px; }
 
@@ -24,13 +27,12 @@ a.external {
 
 a:link, a:visited {
   color: #3792B3;
-  font-weight: bold;
   outline-color: -moz-use-text-color;
   outline-style: none;
   outline-width: medium;
   text-decoration: none; }
 
-p.center {
+p.center, .center {
   text-align: center; }
 
 section.text p, section.text h3 {
@@ -54,28 +56,48 @@ section.text ul li p, section.text ol li p {
 
 /* home */
 section.announcement {
-  margin-bottom: 1em; }
-
-section.announcement p {
-  font-size: 18px;
-  color: #333;
-  margin: .5em 1em;
-  text-align: center; }
+  margin-bottom: 2em; }
 
 section.announcement p.title {
   font-size: 24px;
-  color: #666;
-  margin: .5em 0; }
+  color: #444;
+  margin: .5em 0;
+  text-align: center; }
+
+section.announcement p.subtitle {
+  font-size: 18px;
+  color: #333;
+  margin: .5em 0 .5em 30px;
+  text-align: center;
+  float: left;
+  width: 300px; }
 
 section.announcement p a {
-  font-weight: bold;
-  font-style: normal; }
+  font-style: normal;
+  font-size: 14px; }
 
 section.announcement p a:hover {
-  text-decoration: underline; }
+  text-decoration: none; }
+
+section.announcement div.feature {
+  float: right;
+  width: 275px;
+  margin-top: 7px; }
+
+section.announcement div.feature p {
+  line-height: 19px;
+  text-align: center; }
+
+section.announcement div.feature p.subbutton {
+  font-size: 12px;
+  text-align: center;
+  line-height: 8px; }
 
 section.tab {
   clear: both; }
+
+section.announcement div.feature p.minilink a {
+  text-decoration: underline; }
 
 section.tab p.empty_message, section.tab p.main_message {
   color: #444;
@@ -293,3 +315,15 @@ button.loading {
   display: inline;
   padding-right: 18px;
   background: url(/images/indicator.gif) no-repeat right; }
+
+form fieldset.buttons li.loading-indicator {
+  display: none;
+  line-height: 0;
+  margin: 0;
+  padding: 10px 10px 0 0; }
+
+form.loading fieldset.buttons li.loading-indicator {
+  display: inline; }
+
+a.add_another_tool.block {
+  display: block; }
