Added way to add sites to a tool while not logged in as well

--- a/app/views/site_tools/create_failed.js.erb
+++ b/app/views/site_tools/create_failed.js.erb
@@ -1,2 +1,2 @@
-$(".loading-indicator").hide();
+$("#new_using").removeClass("loading");
 alert("<%= escape_javascript(@using.errors.full_messages.join(', ')) %>");
