--- a/app/views/tools/_sites.erb
+++ b/app/views/tools/_sites.erb
@@ -1,5 +1,8 @@
 <section class="tab">
-  <a name="add_new_site"></a>
+  <% if !logged_in? || current_user.can_add_lines?(@tool) %>
+    <%= render "tools/add_new_sites" %>
+  <% end %>
+
   <% if @tool.sites_count > 0 %>
     <% description "We know of #{pluralize(@tool.sites_count, "site")} using #{@tool.name} (#{@tool.url})." %>
     <div class="title_bar group">
@@ -15,17 +18,16 @@
       </div>
     </div>
   
-    <% if !logged_in? || current_user.can_add_lines?(@tool) %>
-      <%= render "tools/add_new_sites" %>
-    <% end %>
-  
     <ul id="tool-sites-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
       <%= render :partial => 'usings/using_site', :collection => sites %>
     </ul>
     <%= will_paginate sites %>
   <% else %>
-    <%= render "tools/add_new_sites" %>
     <ul id="tool-sites-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>"></ul>
     <p class="empty_message">We don't know of any sites using <%= @tool.name %>.</p>
+  <% end %>
+  
+  <% if logged_in? && sites.count > 10 %>
+    <p class="add_more"><a href="#add_new_tool" class="add_another_site grey button block">Add another site here</a></p>
   <% end %>
 </section>
