--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -6,7 +6,7 @@ a.add { background:url(https://s3.amazonaws.com/s.lineofthought.com/images/icons
 a.remove { background:url(https://s3.amazonaws.com/s.lineofthought.com/images/icons/14-minus.png) no-repeat 0 7px; padding-left:20px; }
 img.screenshot, .screenshot img { border: 1px solid #ccc; float:left; }
 a.external { font-size:10px; }
-a:link, a:visited { color:#3792B3; outline-color:-moz-use-text-color; outline-style:none; outline-width:medium; text-decoration:none; }
+a:link, a:visited { color:#3792B3; outline-color:-moz-use-text-color; outline-style:none; outline-width:medium; text-decoration:none; font-weight:bold; }
 p.center, .center { text-align:center; }
 
 section.text { }
@@ -23,11 +23,12 @@ section.announcement p.title  { font-size:24px; color:#444; margin:.5em 0; text-
 section.announcement p.subtitle { font-size:18px; color:#333; margin:.5em 0 .5em 30px; text-align:center; float:left; width:300px; }
 section.announcement p a { font-style:normal; font-size:14px; }
 section.announcement p a:hover { text-decoration:none; }
-section.announcement div.feature { float:right; width:275px; margin-top: 7px; }
+section.announcement div.feature { float:right; width:275px; }
 section.announcement div.feature p { line-height: 19px; text-align:center; }
 section.announcement div.feature p.subbutton { font-size: 12px; text-align: center; line-height: 8px; }
 section.tab { clear:both; }
 section.announcement div.feature p.minilink a { text-decoration:underline; }
+section.announcement div.feature a.button { font-size: 18px; padding: 9px 18px; }
 section.tab p.empty_message, section.tab p.main_message { color:#444; text-align:center; font-size:16px; margin:1.5em 0 1em; }
 
 
