--- a/app/views/tools/_show_sidebar.erb
+++ b/app/views/tools/_show_sidebar.erb
@@ -1,25 +1,24 @@
 <section class="sidebar">
   <aside>
     <h3>Your Permissions</h3>
-      <% if logged_in? && current_user.can_edit_tool?(@tool) %>
-        <ul class="lst">
-          <li><%= link_to "Edit this tool", edit_tool_path(@tool) %></li>
-          <li><a href="#add_new_site" class="add_another_site">Add another site</a></li>
-          <li><%= link_to "Undelete sites", deleted_tool_sites_path(@tool) %></li>
-        
-          <% if current_user.can_destroy_tool?(@tool) %>
-            <li><%= link_to "Delete this tool", tool_path(@tool), :method => :delete, :confirm => "Are you sure you want to delete this site?" %></li>
-          <% end %>
-        </ul>
-      <% elsif logged_in? %>
-        <ul class="lst">
-          <li><a href="#add_new_site" class="add_another_site">Add another site</a></li>
-        </ul>
-      <% elsif !logged_in? %>
-      <ul class="txt">
-        <li><%= link_to "Sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add some sites that use this tool.</li>
+    <% if logged_in? && current_user.can_edit_tool?(@tool) %>
+      <ul class="lst">
+        <li><%= link_to "Edit this tool", edit_tool_path(@tool) %></li>
+        <li><a href="#add_new_site" class="add_another_site">Add another site</a></li>
+        <li><%= link_to "Undelete sites", deleted_tool_sites_path(@tool) %></li>
+      
+        <% if current_user.can_destroy_tool?(@tool) %>
+          <li><%= link_to "Delete this tool", tool_path(@tool), :method => :delete, :confirm => "Are you sure you want to delete this site?" %></li>
+        <% end %>
       </ul>
-      <% end %>
+    <% else %>
+      <ul class="lst">
+        <li><a href="#add_new_site" class="add_another_site">Add a site that uses this tool</a></li>
+        <% if can_edit_tool?(@tool) %>
+          <li><%= link_to "Edit this tool", edit_tool_path(@tool) %></li>
+        <% end %>
+      </ul>
+    <% end %>
   </aside>
   <% if @tool.sites_count > 0 %>
   <aside>
