--- a/app/views/tools/new.erb
+++ b/app/views/tools/new.erb
@@ -27,6 +27,12 @@
   </section>
 </section>
 
+<section class="sidebar">
+  <aside>
+    <p>You'll be able to edit this tool going forward.</p>
+  </aside>
+</sidebar>
+
 <% javascript do %>
 var checkForLookup = false
 $(function() {
