--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -30,7 +30,7 @@
   <aside class="search">
     <form action="<%= sites_path %>" method="get">
       <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a site..." />
-      <input type="submit" value="Search" />
+      <input type="submit" value="Search" class="small button grey" />
     </form>
   </aside>
   <aside>
