--- a/app/views/tool_sites/_form.erb
+++ b/app/views/tool_sites/_form.erb
@@ -13,8 +13,8 @@
   <%= form.buttons do %>
     <%= form.commit_button :button_html => { :value => "add this site", :class => "right grey button", :id => "add_site_submit" } %>
     <li id="lookup_loading" class="response right loading-indicator"> <img src="/images/indicator.gif"/></li>
-    <%= form.commit_button :button_html => { :value => "hide form", :class => "left add_another_site" } %>
-    <%= form.commit_button :button_html => { :type => "reset", :id => "reset_button", :value => "reset", :class => "left" } %>
+    <%= form.commit_button :button_html => { :value => "hide form", :class => "left add_another_site button small grey" } %>
+    <%= form.commit_button :button_html => { :type => "reset", :id => "reset_button", :value => "reset", :class => "left button small grey" } %>
   <% end %>
 <% end %>
   
