--- a/app/views/site_tools/_form.erb
+++ b/app/views/site_tools/_form.erb
@@ -14,8 +14,8 @@
   <%= form.buttons do %>
     <%= form.commit_button :button_html => { :value => "add this tool", :class => "right grey button", :id => "add_tool_submit" } %>
     <li id="lookup_loading" class="response right loading-indicator"> <img src="/images/indicator.gif"/></li>
-    <%= form.commit_button :button_html => { :value => "hide form", :class => "left add_another_tool" } %>
-    <%= form.commit_button :button_html => { :type => "reset", :id => "reset_button", :value => "reset", :class => "left" } %>
+    <%= form.commit_button :button_html => { :value => "hide form", :class => "left add_another_tool button small grey" } %>
+    <%= form.commit_button :button_html => { :type => "reset", :id => "reset_button", :value => "reset", :class => "button small grey left" } %>
   <% end %>
 <% end %>
   
