--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -28,7 +28,7 @@
   <aside class="search">
     <form action="<%= tools_path %>" method="get">
       <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a tool..." />
-      <input type="submit" value="Search" />
+      <input type="submit" value="Search" class="small button grey" />
     </form>
   </aside>
 
