--- a/app/views/tools/new.erb
+++ b/app/views/tools/new.erb
@@ -10,9 +10,9 @@
       <%= semantic_form_for @tool, :url => lookup_tools_path, :html => { :id => "lookup_tool", :remote => true } do |f| %>
         <%= f.inputs do %>
           <%= f.input :url, :as => :string, :required => true, :label => "Enter the definitive URL for this Tool" %>
-          <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" } %>
-          <%= f.commit_button :label => "Cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" } %>
-          <li id="lookup_loading" style="display:none;" class="response"> <img src="/images/indicator.gif"/> We're looking up this tool, just a sec.</li>
+          <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" }, :button_html => { :class => "button grey right" } %>
+          <li id="lookup_loading" class="response right" style="display:none;margin:0 10px;"> <img src="/images/indicator.gif"/></li>
+          <%= f.commit_button :label => "Cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" }, :button_html => { :class => "button grey small right" } %>
         <% end %>
       <% end %>
       <div id="edit_tool_form" class="response"></div>
