--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,6 +30,7 @@
     <p>We're limiting new sign up while we work things out, but if you'd like an invite, you can <%= link_to "sign up", new_subscription_path %> and we'll let you know.</p>
     <% end %>
   </aside>
+  <%= render :partial => "layouts/sidebar/share" %>
   <%= render :partial => "tools/featured" %>
   <%= render :partial => "usings/recent" %>
 </section>
