Added ability to share on home sidebar

--- a/app/views/layouts/sidebar/_share.html.erb
+++ b/app/views/layouts/sidebar/_share.html.erb
@@ -1,4 +1,4 @@
-<% message = "Check+out+Line+of+Thought!+Share+the+technology+stack+of+your+website+or+see+what+others+have+shared." %>
+<% message = "Check out Line of Thought! Share the the technical details of your website or see what others have shared." %>
 <aside>
   <h3>Share this site</h3>
   <ul class="txt">      
