--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,6 +79,7 @@
       <ul>
         <li><a href="<%= tour_url %>">Take A Tour</a></li>
         <li><a href="<%= about_url %>">About Line of Thought</a></li>
+        <li><a href="<%= license_url %>">License</a></li>
         <li><a href="<%= lineofthought_url %>">Tools We Use</a></li>
         <li><a href="http://blog.lineofthought.com">Blog</a></li>
       </ul>
