--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -69,7 +69,7 @@ article a:hover { text-decoration:underline; }
 article h2 { margin-bottom:.6em; }
 article h2, article h2 a:link, article h2 a:visited { color:#444; font-size:26px; }
 article h3 { margin-top:1.4em; }
-article ul { list-style:disc inside; margin:1em; }
+article ul { list-style: disc outside; margin: 1em 1em 1em 2em; }
 article .article { margin-bottom:10px; }
 article .date { color:#777; font-size:14px; }
 body.blog #comments { padding:1em; }
